# TML

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  Doxygen.config  LICENSE  README.md
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_linux.yml  build_windows.yml  build_windows_mingw.yml  cmake.yml  codeql-analysis.yml
Shaders/: Fragment.fs  Vertex.vs
cmake/: CompileDefinitions.cmake  External.cmake  GLFW.cmake  LinuxToWindows.cmake  ModularBuild.cmake  MonolithicBuild.cmake  Options.cmake  fmt.cmake  lunasvg.cmake
examples/Circle/: CMakeLists.txt  main.cpp
examples/Compute/: CMakeLists.txt  main.cpp
examples/GUI_TESTING/: CMakeLists.txt  main.cpp
examples/Http/: CMakeLists.txt  main.cpp
examples/ImageViewer/: CMakeLists.txt  README.md  main.cpp
examples/Music/: CMakeLists.txt  main.cpp
examples/PostProcessing/: CMakeLists.txt  ComputeShader.h  main.cpp
examples/Raycasting/: CMakeLists.txt  main.cpp
examples/Simple GUI/: CMakeLists.txt  main.cpp
examples/Sprite/: CMakeLists.txt  main.cpp
examples/example1/: CMakeLists.txt  main.cpp
examples/example2/: CMakeLists.txt  main.cpp
examples/example3/: CMakeLists.txt  main.cpp
examples/example4/: CMakeLists.txt  main.cpp
examples/experiments/: CMakeLists.txt  main.cpp
examples/net_test/: CMakeLists.txt  main.cpp
examples/raycasting/: CMakeLists.txt  main.cpp
examples/testing_area/: CMakeLists.txt  main.cpp
external-headers/glad/: glad.h
external-headers/glm/ext/: matrix_clip_space.hpp  matrix_int2x2_sized.hpp  matrix_int2x4_sized.hpp  matrix_int3x4_sized.hpp  matrix_int4x3_sized.hpp  matrix_relational.inl  matrix_uint2x2_sized.hpp  (+11 more)
include/: Assert.h  Buffers.h  Color.h  Default_font.h  Font.h  GlDebug.h  Image.h  Input.h  RenderWindow.h  Shader.h  TML.h  Texture.h  Types.h  Vector2.h  Window.h
include/Audio/: Audio.h  AudioBuffer.h  Wav.h
include/Drawable/: Circle.h  Drawable.h  Rectangle.h  Sprite.h  Text.h  Vertex.h  Video.h
include/GLFW/: glfw3.h.gch  glfw3native.h.gch
include/IO/: File.h
include/TML/: Audio.h  Camera.h  Clock.h  Color.h  DedicatedGraphics.h  Export.h  Font.h  Graphics.h  Image.h  Input.h  Interface.h  Logger.h  Network.h  RenderWindow.h  Renderer.h  System.h  TML.h  TMLAssert.h  Texture.h  Types.h  Vector2.h  Window.h
include/Utilities/: Bezier.h  Condition.h  Copy.h  Function_ptr.h  Utilities.h
include/glad/: glad.h
include/glm/: CTestTestfile.cmake  Makefile  cmake_install.cmake
res/: Circle.h  Font.h
src/: Camera.cpp  Clock.cpp  Font.cpp  GLDebug.cpp  Image.cpp  Input.cpp  RenderWindow.cpp  Renderer.cpp  Shader.cpp  TOKEN_SOURCE_FILE.cpp  Text.cpp  Texture.cpp  Video.cpp  Window.cpp  glad.c
src/Audio/: Audio.cpp  AudioBuffer.cpp  AudioStream.cpp  AudioType.cpp  CMakeLists.txt  Capture.cpp  Converter.h  Envelope.cpp  Generator.cpp  Mixer.cpp  Mixer.h  MixerPriv.h  Music.cpp  Sound.cpp
src/BufferTypes/: IndexBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
src/Graphics/: CMakeLists.txt  Camera.cpp  Color.cpp  Font.cpp  Image.cpp  Ray.cpp  RenderTarget.cpp  RenderTexture.cpp  RenderWindow.cpp  Renderer.cpp  Renderer.h  Text.cpp  TextDefines.h  Texture.cpp  Video.cpp  Window.cpp
src/Graphics/Core/: BufferLayout.cpp  ComputeShader.cpp  DefaultText.cpp  FrameBuffer.cpp  GLDebug.cpp  RenderTarget.cpp  Shader.cpp  Texture.cpp
src/Graphics/Core/BufferTypes/: BufferFlags.h  IndexBuffer.cpp  StorageBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
src/Graphics/Core/BufferTypes/GL4/: IndexBuffer.h  VertexArray.h  VertexBuffer.h
src/Graphics/Core/BufferTypes/GLES/: IndexBuffer.h  VertexArray.h  VertexBuffer.h
src/Graphics/Core/Headers/: Buffers.h  DefaultText.h  GLHeader.h  GlDebug.h  MappedVector.h  Shader.h  Shaders.h  _Assert.h
src/Graphics/Drawable/: Circle.cpp  Drawable.cpp  Line.cpp  Rectangle.cpp  Shape.cpp  Sprite.cpp  Text.cpp
src/Graphics/Headers/: Font.h  GLHeader.h  TextDefines.h
src/Graphics/Headers/Shaders/: Vertex.glsl
src/Headers/: Font.h  GLHeader.h  Logo.h  MappedVector.h  Shaders.h  _Assert.h
src/IO/: Clipboard.cpp  Event.cpp  Input.cpp
src/Interface/: BaseComponent.cpp  CMakeLists.txt  Component.cpp  Container.cpp  Interface.cpp  InterfaceComponent.cpp  Layer.cpp  Layout.cpp  UIRoot.cpp
src/Interface/Components/: Button.cpp  Checkbox.cpp  Combobox.cpp  DropList.cpp  Dropmenu.cpp  ImageButton.cpp  Label.cpp  LineInput.cpp  Listbox.cpp  Menubar.cpp  NumericInput.cpp  OptionSelector.cpp  Progressbar.cpp  Scrollbar.cpp  Separator.cpp  Slider.cpp  Spacer.cpp  TextInput.cpp  ToggleSwitch.cpp  Viewport.cpp  WindowContainer.cpp
src/Interface/Containers/: Container.h  DebugPanel.cpp
src/Interface/Layouts/: Horizontal.cpp  HorizontalLayout.cpp  Layout.cpp  Vertical.cpp  VerticalLayout.cpp
src/Network/: CMakeLists.txt  Connection.cpp  Context.cpp  IpAddress.cpp  Packet.cpp  PlatformHeaders.h  Receiver.cpp  Socket.cpp  SocketMonitor.cpp  SocketUtils.cpp  SocketUtils.h  TcpReceiver.cpp  TcpSocket.cpp  UdpSocket.cpp  UnixSockets.h  WindowsSocket.h
src/Network/Http/: Client.cpp  Host.cpp  Request.cpp  Response.cpp
src/Network/Unix/: Receiver_Impl.h  Socket_Impl.h
src/Network/Win32/: NetworkContext.cpp  NetworkContext.h  Receiver_Impl.h  Socket_Impl.h
src/System/: CMakeLists.txt  Clipboard.cpp  Clock.cpp  Compression.cpp  Event.cpp  File.cpp  Image.cpp  Input.cpp  Logger.cpp
src/System/Clip/: CMakeLists.txt  clip_win_wic.h  clip_x11.cpp  clip_x11_png.h
src/System/Serializer/: Deserializer.cpp  Serializer.cpp
src/System/lunasvg/: CMakeLists.txt
src/System/lunasvg/include/: lunasvg.h
src/System/lunasvg/source/: lunasvg.cpp
src/Utilities/: Clock.cpp
src/Window/: CMakeLists.txt  Cursor.cpp  Event.cpp  EventSystem.cpp  Gamepad.cpp  Input.cpp  Logo.h  Monitor.cpp  Window.cpp
src/Window/Drop/: DropManager.cpp  DropManager.h
src/Window/GLContext/: GLContext.cpp  GLContext.h
src/internal/: Assert.h  Buffers.h  Circle_texture.h  Default_cursor.h  Default_font.h  Default_icon.h  GLHeader.h  GlDebug.h  Shader.h  Shaders.h  _Assert.h
(+169 files in other folders)
